Fix various issues in resourceBatch window event processing flow